k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthconnect-app
  labels:
    app: healthconnect
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthconnect
  template:
    metadata:
      labels:
        app: healthconnect
    spec:
      containers:
        - name: healthconnect-container
          image: healthconnectacr2026.azurecr.io/healthconnect:1.0
          ports:
            - containerPort: 8081
