k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthconnect-service
spec:
  type: LoadBalancer
  selector:
    app: healthconnect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
